simple leveled tech tree implementation