@@ -2,11 +2,11 @@ package com.scheible.risingempire.webapp.adapter.frontend.selecttechpage;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.scheible.risingempire.game.api.view.system.SystemId;
 import com.scheible.risingempire.game.api.view.tech.TechGroupView;
 import com.scheible.risingempire.game.api.view.tech.TechId;
+import com.scheible.risingempire.game.api.view.tech.TechView;
 import com.scheible.risingempire.webapp.adapter.frontend.annotation.FrontendController;
 import com.scheible.risingempire.webapp.adapter.frontend.context.FrontendContext;
 import com.scheible.risingempire.webapp.adapter.frontend.selecttechpage.SelectTechPageDto.TechDto;
@@ -38,14 +38,18 @@ class SelectTechPageController {
 			selectTechsEntities = selectTechs.iterator()
 				.next()
 				.stream()
-				.map(tech -> new EntityModel<>(new TechDto(tech.id().value(), tech.name()))
+				.map(tech -> new EntityModel<>(
+						new TechDto(tech.id().value(), tech.name(), tech.description(), tech.expense()))
 					.with(Action.jsonPost("select", context.toFrontendUri("select-tech-page", "selects"))
 						.with("technologyId", tech.id().value()) //
 						.with("selectedStarId", context.getSelectedStarId().get().value())))
-				.collect(Collectors.toList());
+				.toList();
 		}
 
-		return new SelectTechPageDto(selectTechsEntities);
+		TechView researchedTech = selectTechs.iterator().next().researched();
+
+		return new SelectTechPageDto(new TechDto(researchedTech.id().value(), researchedTech.name(),
+				researchedTech.description(), researchedTech.expense()), selectTechsEntities);
 	}
 
 	@PostMapping(path = "/select-tech-page/selects", consumes = APPLICATION_JSON_VALUE)
